2015-05-20  Devrim Gündüz  <devrim@gunduz.org>
	* doc/syntax/postgresql.nanorc: New file -- syntax highlighting for
	PostgreSQL, first posted as Savannah patch #8601.  Trimmed by Benno.

2015-05-08  Benno Schulenberg  <bensberg@justemail.net>
	* src/browser.c (browser_refresh): Take the distant possibility of
	terabyte files into account, and in the bargain get rid of the need
	to calculate the number of digits in UINT_MAX.
	* src/files.c (get_next_filename): Limit the number of backup files
	to one hundred thousand -- which should be far more than enough --
	before finding a unused filename takes an annoying amount of time.
	* src/utils.c (digits): Delete this now unneeded function.

2015-05-03  Benno Schulenberg  <bensberg@justemail.net>
	* src/browser.c (browser_refresh): Display an ellipsis only when the
	filename is longer than the available space, not when it still fits.
	* src/browser.c, src/nano.c: Adjust a few comments and line wrappings.
	* doc/syntax/groff.nanorc: Use character classes correctly.

2015-04-28  Benno Schulenberg  <bensberg@justemail.net>
	* src/color.c (color_update): Match the file regex of a syntax against
	the absolute, canonical path instead of against the path the user gave.
	This fixes Savannah bug #44288, reported by Mike Frysinger.
	* doc/syntax/po.nanorc: Improve the colouring of message tags.
	* src/winio.c (get_escape_seq_kbinput): Unwrap a bunch of comments.

2015-04-25  Benno Schulenberg  <bensberg@justemail.net>
	* src/search.c (do_replace_loop): Remove the unintended special
	case for replacing multiple occurrences of a literal ^ or $; see
	https://lists.gnu.org/archive/html/nano-devel/2015-04/msg00065.html.
	* src/search.c (findnextstr): Delete an always-FALSE parameter.
	* src/search.c (findnextstr): Rename the parameter 'whole_word'
	to 'whole_word_only', for clarity.

2015-04-21  Benno Schulenberg  <bensberg@justemail.net>
	* src/browser.c (findnextfile): Save the settings of the global